# test-tr5

./: .gitignore  CMakeLists.txt  MAIN.idc  MAIN.map  SETUP.MOD  SETUP_INTERNALBETA  SETUP_RETAIL  a2.txt  beta.txt  dump (1) - Copie.txt  dump (1).txt  fns.csv  fns.txt  funcs.xlsx  readme.md  retail.txt  setupmod_extract.py  structs.h  truc.txt
GAME/: BOX.C  BOX.H  CAMERA.C  CAMERA.H  COLLIDE.C  COLLIDE.H  CONTROL.C  CONTROL.H  DEBRIS.C  DEBRIS.H  DELSTUFF.C  DELSTUFF.H  DELTAPAK.C  DELTAPAK.H  DOOR.C  DOOR.H  DRAW.C  DRAW.H  EFFECT2.C  EFFECT2.H  EFFECTS.C  EFFECTS.H  FLMTORCH.C  FLMTORCH.H  GAMEFLOW.C  GAMEFLOW.H  HAIR.C  HAIR.H  HEALTH.C  HEALTH.H  ITEMS.C  ITEMS.H  LARA.C  LARA.H  LARA1GUN.C  LARA1GUN.H  LARA2GUN.C  LARA2GUN.H  LARACLMB.C  LARACLMB.H  (+41 more)
SPEC_PC/: FILE.C  FILE.H  WINMAIN.C  WINMAIN.H
SPEC_PSX/: 3D_GEN.C  3D_GEN.H  3D_OBJ.C  3D_OBJ.H  CD.C  CD.H  DRAWPHAS.C  DRAWPHAS.H  DRAWSPKS.C  DRAWSPKS.H  FILE.C  FILE.H  GPU.C  GPU.H  LOADSAVE.C  LOADSAVE.H  LOAD_LEV.C  LOAD_LEV.H  MALLOC.C  MALLOC.H  MEMCARD.C  MEMCARD.H  PROFILE.C  PROFILE.H  PSOUTPUT.C  PSOUTPUT.H  PSXINPUT.C  PSXINPUT.H  PSXMAIN.C  PSXMAIN.H  REQUEST.C  REQUEST.H  ROOMLOAD.C  ROOMLOAD.H  SPECIFIC.C  SPECIFIC.H  SPUSOUND.C  SPUSOUND.H  TYPEDEFS.H
SetupmodExtr/: LEVELLOAD.idb
