cmake_minimum_required(VERSION 3.7)
project(test_tr5)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        GAME/BOX.C
        GAME/BOX.H
        GAME/CAMERA.C
        GAME/CAMERA.H
        GAME/COLLIDE.C
        GAME/COLLIDE.H
        GAME/CONTROL.C
        GAME/CONTROL.H
        GAME/DEBRIS.C
        GAME/DEBRIS.H
        GAME/DELSTUFF.C
        GAME/DELSTUFF.H
        GAME/DELTAPAK.C
        GAME/DELTAPAK.H
        GAME/DOOR.C
        GAME/DOOR.H
        GAME/DRAW.C
        GAME/DRAW.H
        GAME/EFFECT2.C
        GAME/EFFECT2.H
        GAME/EFFECTS.C
        GAME/EFFECTS.H
        GAME/FLMTORCH.C
        GAME/FLMTORCH.H
        GAME/GAMEFLOW.C
        GAME/GAMEFLOW.H
        GAME/HAIR.C
        GAME/HAIR.H
        GAME/HEALTH.C
        GAME/HEALTH.H
        GAME/ITEMS.C
        GAME/ITEMS.H
        GAME/LARA.C
        GAME/LARA.H
        GAME/LARA1GUN.C
        GAME/LARA1GUN.H
        GAME/LARA2GUN.C
        GAME/LARA2GUN.H
        GAME/LARACLMB.C
        GAME/LARACLMB.H
        GAME/LARAFIRE.C
        GAME/LARAFIRE.H
        GAME/LARAFLAR.C
        GAME/LARAFLAR.H
        GAME/LARAMISC.C
        GAME/LARAMISC.H
        GAME/LARASURF.C
        GAME/LARASURF.H
        GAME/LARASWIM.C
        GAME/LARASWIM.H
        GAME/LOT.C
        GAME/LOT.H
        GAME/MISSILE.C
        GAME/MISSILE.H
        GAME/NEWINV2.C
        GAME/NEWINV2.H
        GAME/OBJECTS.C
        GAME/OBJECTS.H
        GAME/OBJLIGHT.C
        GAME/OBJLIGHT.H
        GAME/PEOPLE.C
        GAME/PEOPLE.H
        GAME/PICKUP.C
        GAME/PICKUP.H
        GAME/SAVEGAME.C
        GAME/SAVEGAME.H
        GAME/SOUND.C
        GAME/SOUND.H
        GAME/SPHERE.C
        GAME/SPHERE.H
        GAME/SPOTCAM.C
        GAME/SPOTCAM.H
        GAME/SWITCH.C
        GAME/SWITCH.H
        GAME/TEXT.C
        GAME/TEXT.H
        GAME/TOMB4FX.C
        GAME/TOMB4FX.H
        GAME/TRAPS.C
        GAME/TRAPS.H
        SPEC_PC/FILE.C
        SPEC_PC/FILE.H
        SPEC_PC/WINMAIN.C
        SPEC_PC/WINMAIN.H
        SPEC_PSX/3D_GEN.C
        SPEC_PSX/3D_GEN.H
        SPEC_PSX/3D_OBJ.C
        SPEC_PSX/3D_OBJ.H
        SPEC_PSX/CD.C
        SPEC_PSX/CD.H
        SPEC_PSX/DRAWPHAS.C
        SPEC_PSX/DRAWPHAS.H
        SPEC_PSX/DRAWSPKS.C
        SPEC_PSX/DRAWSPKS.H
        SPEC_PSX/FILE.C
        SPEC_PSX/FILE.H
        SPEC_PSX/GPU.C
        SPEC_PSX/GPU.H
        SPEC_PSX/LOAD_LEV.C
        SPEC_PSX/LOAD_LEV.H
        SPEC_PSX/LOADSAVE.C
        SPEC_PSX/LOADSAVE.H
        SPEC_PSX/MALLOC.C
        SPEC_PSX/MALLOC.H
        SPEC_PSX/MEMCARD.C
        SPEC_PSX/MEMCARD.H
        SPEC_PSX/PROFILE.C
        SPEC_PSX/PROFILE.H
        SPEC_PSX/PSOUTPUT.C
        SPEC_PSX/PSOUTPUT.H
        SPEC_PSX/PSXINPUT.C
        SPEC_PSX/PSXINPUT.H
        SPEC_PSX/PSXMAIN.C
        SPEC_PSX/PSXMAIN.H
        SPEC_PSX/REQUEST.C
        SPEC_PSX/REQUEST.H
        SPEC_PSX/ROOMLOAD.C
        SPEC_PSX/ROOMLOAD.H
        SPEC_PSX/SPECIFIC.C
        SPEC_PSX/SPECIFIC.H
        SPEC_PSX/SPUSOUND.C
        SPEC_PSX/SPUSOUND.H)

add_executable(test_tr5 ${SOURCE_FILES})